# gamefaqs-clone

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210406_0438.py  0003_auto_20210406_0535.py
assets/images/: README.MD
authentication/: forms.py  views.py
error_pages/: apps.py  views.py
game/: admin.py  forms.py  helpers.py  models.py  views.py
game/migrations/: 0001_initial.py
gamefaqs_project/: asgi.py  settings.py  urls.py  wsgi.py
post/: forms.py  models.py  views.py
post/migrations/: 0001_initial.py
static/: app.js  style.css
templates/: 404.html  500.html  add-game.html  add_comment_to_post.html  add_post.html  all-games.html  all-users.html  base.html  dummy.html  game-info.html  generic-form.html  index.html  login.html  navigation.html  platform.html  post_detail.html  post_list.html  profile.html  search.html  signup.html  user_profile.html
