[tool.poetry]
name = "gamefaqs-clone"
version = "0.1.0"
description = "Clone of Gamefaqs with added features"
authors = ["Steven Delpercio <stevendelpercio1992@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
