[tool.poetry]
name = "gamefaqs-clone"
version = "0.1.0"
description = "Clone of Gamefaqs with added features"
authors = ["Steven Delpercio <stevendelpercio1992@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
Pillow = "^8.2.0"
python-decouple = "^3.4"
django-fontawesome-5 = "^1.0.18"
django-bootstrap = "^0.2.4"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
